--- a/css/styles.css
+++ b/css/styles.css
@@ -126,7 +126,7 @@ body {
   letter-spacing: 0.32px;
 }
 
-.filter-text {
+.accent {
   color: var(--iris, #4d5ae5);
   text-align: center;
   font-size: 16px;
