--- a/css/styles.css
+++ b/css/styles.css
@@ -1,14 +1,18 @@
+:root{
+  --accent-color: #4d5ae5;
+}
 body {
   font-family: Roboto, sans-serif;
 }
 
-.header-logo {
+.header-logoweb {
   color: var(--iris, #4d5ae5);
   font-size: 18px;
-  font-family: Raleway;
+  font-style: normal;
   font-weight: 800;
-  line-height: 1.16;
-  letter-spacing: -0.03px;
+  line-height: 21px;
+  letter-spacing: 0.54px;
+  text-transform: uppercase;
 }
 
 .link {
@@ -18,29 +22,31 @@ body {
   list-style-type: none;
 }
 
-.header-logoweb {
+.header-logoweb-link {
   color: var(--navyblue, #2e2f42);
   font-size: 18px;
-  font-family: Raleway;
+  font-style: normal;
   font-weight: 800;
-  line-height: 1.16;
-  letter-spacing: -0.03em;
+  line-height: 21px;
+  letter-spacing: 0.54px;
+  text-transform: uppercase;
 }
 
 .header-menu-link {
   color: var(--navyblue, #2e2f42);
   font-size: 16px;
-  font-family: Roboto;
+  font-style: normal;
   font-weight: 500;
-  line-height: 1.5;
-  letter-spacing: -0.02em;
+  line-height: 24px;
+  letter-spacing: 0.32px;
 }
 
 .social-iten {
   color: var(--slate, #434455);
   font-size: 16px;
-  line-height: 1.5;
-  letter-spacing: -0.02em;
+  font-weight: 400;
+  line-height: 24px;
+  letter-spacing: 0.32px;
 }
 
 .section-solution {
@@ -136,13 +142,13 @@ body {
 }
 
 .filter-link :hover {
-  color: #404bbf;
+  color: #4d5ae5;
 }
 
 .filter-link :focus {
-  color: #404bbf;
+  color: #4d5ae5;
 }
-.filter-link {
+.filter-link span {
   border-radius: 4px;
   border: 1px solid var(--cornflower, #e7e9fc);
   background: var(--cloud, #f4f4fd);
