--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,4 @@
-:root{
+:root {
   --accent-color: #4d5ae5;
 }
 body {
@@ -13,6 +13,7 @@ body {
   line-height: 21px;
   letter-spacing: 0.54px;
   text-transform: uppercase;
+  cursor: pointer;
 }
 
 .link {
@@ -26,9 +27,10 @@ body {
   color: var(--navyblue, #2e2f42);
   font-size: 18px;
   font-style: normal;
+  font-family: Raleway, sans-serif;
   font-weight: 800;
-  line-height: 21px;
-  letter-spacing: 0.54px;
+  line-height: 1.17px;
+  letter-spacing: 0.03em;
   text-transform: uppercase;
 }
 
@@ -40,7 +42,13 @@ body {
   line-height: 24px;
   letter-spacing: 0.32px;
 }
+.header-menu-link :hover {
+  color: #4d5ae5;
+}
 
+.header-menu-link :focus {
+  color: #4d5ae5;
+}
 .social-iten {
   color: var(--slate, #434455);
   font-size: 16px;
@@ -153,6 +161,7 @@ body {
   border: 1px solid var(--cornflower, #e7e9fc);
   background: var(--cloud, #f4f4fd);
   font-family: inherit;
+  cursor: pointer;
 }
 
 .foto-link-title {
