--- a/css/styles.css
+++ b/css/styles.css
@@ -44,6 +44,7 @@ body {
   letter-spacing: 0.03em;
   text-transform: uppercase;
   text-decoration:none;
+  cursor: pointer;
 }
 
 .header-menu-link {
