--- a/css/styles.css
+++ b/css/styles.css
@@ -94,7 +94,7 @@ body {
  }
 .solution-button {
   border-radius: 4px;
-  background: var(--iris, #4d5ae5);
+  background-color: #4D5AE5;
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
   cursor: pointer;
   font-family: "Roboto", sans-serif;
