--- a/css/styles.css
+++ b/css/styles.css
@@ -152,13 +152,13 @@ body {
 }
 
 .filter-link :hover {
-  color: #4d5ae5;
+  color: #FFFFFF;
 }
 
 .filter-link :focus {
-  color: #4d5ae5;
+  color:  #FFFFFF;
 }
-.filter-link span {
+.filter-link {
   border-radius: 4px;
   border: 1px solid var(--cornflower, #e7e9fc);
   background: var(--cloud, #f4f4fd);
@@ -166,19 +166,44 @@ body {
   cursor: pointer;
 }
 
-.foto-link-title {
+.accent {
+  font-weight: 500; 
+  font-size: 16px;
+  font-size: 16px;
+  font-family: "Roboto", sans-serif;
+  letter-spacing: 0.04em;
+  color: #4d5ae5; 
+  cursor: pointer;
+}
+.accent :hover {
+  background-color: #404BBF;
+}
+
+.fi.accent :focus {
+  background-color: #404BBF;
+}
+.foto-list {
   color: var(--navyblue, #2e2f42);
   font-size: 20px;
   font-weight: 500;
-  line-height: 24px;
-  letter-spacing: 0.4px;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
+}
+
+.navigation-link {
+  font-weight: 800; 
+  font-size: 18px;
+  line-height: 1.17;
+  letter-spacing: 0.03em;
+  text-decoration: none;
+  font-family: 'Raleway', sans-serif;
 }
 
 .foto-link-text {
   color: var(--slate, #434455);
   font-size: 16px;
-  line-height: 24px;
-  letter-spacing: 0.32px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
 }
 
 .foto-team {
