--- a/css/styles.css
+++ b/css/styles.css
@@ -171,7 +171,6 @@ body {
   text-align: center;
   font-size: 16px;
   font-weight: 500;
-  font-weight: 500;
   line-height: 1.5;
   letter-spacing: 0.04em;
   cursor: pointer;
@@ -207,7 +206,7 @@ body {
   background-color: #404BBF;
 }
 
-.fi.accent :focus {
+.accent :focus {
   background-color: #404BBF;
 }
 .foto-list {
@@ -217,33 +216,12 @@ body {
   line-height: 1.2;
   letter-spacing: 0.02em;
 }
-
-.navigation-link {
-  font-weight: 800; 
-  font-size: 18px;
-  line-height: 1.17;
-  letter-spacing: 0.03em;
-  text-decoration: none;
-  font-family: 'Raleway', sans-serif;
-}
-.footer-list {
-  font-weight: 800; 
-  font-size: 18px;
-  line-height: 1.17;
-  letter-spacing: 0.03em;
-  text-decoration: none;
-  font-family: 'Raleway', sans-serif;
-}
-  text-decoration: none;
-}
-
 .foto-link-text {
   color: var(--slate, #434455);
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
 }
-
 .foto-team {
   background: url(<path-to-image>),
     lightgray -25.026px 0px / 125% 100% no-repeat;
