--- a/css/styles.css
+++ b/css/styles.css
@@ -1,21 +1,25 @@
 :root {
   --primari-font: "Raleway", sans-serif;
  --secondary-font: "Roboto", sans-serif; 
- --color: #434455;
+ --secondary-black: #434455;
+ --secondary-white: #f4f4fd;
+
+
   --navyblue-color: #2e2f42;
   --iris-color: #4d5ae5;
   --background-color: #FFFFFF;
   --hover-color: #404bbf;
   
+  
 }
 body {
-  font-family: "Roboto", sans-serif; 
-  color: #434455;
-  background-color: #FFFFFF;
+  font-family:var( --secondary-font);
+  color: var( --secondary-black);
+  background-color: var(--background-color);
 
 }
 .header-navigation {
-  color: var(--navyblue, #2e2f42);
+  color: var( --navyblue-color);
   list-style: none;
   font-weight: 500;
   font-size: 16px;
@@ -24,7 +28,7 @@ body {
   text-decoration:none;
 }
 .header-logoweb {
-  color: var(--iris, #4d5ae5);
+  color: var(--iris-color);
   font-size: 18px;
   font-family: "Raleway", sans-serif;
   font-style: normal;
@@ -50,7 +54,7 @@ body {
 }
 
 .header-logoweb-link {
-  color: var(--navyblue, #2e2f42);
+  color: var( --navyblue-color);
   font-size: 18px;
   font-style: normal;
   font-family: "Raleway", sans-serif;
@@ -69,7 +73,7 @@ body {
 }
 
 .header-menu-link {
-  color: var(--navyblue, #2e2f42);
+  color: var( --navyblue-color);
   font-size: 16px;
   font-style: normal;
   font-weight: 500;
@@ -86,7 +90,7 @@ body {
   color: #4d5ae5;
 }
 .social-iten {
-  color: var(--slate, #434455);
+  color: var(--secondary-black);
   font-size: 16px;
   font-weight: 400;
   line-height: 24px;
@@ -100,7 +104,7 @@ body {
   color: #404bbf;
 }
 .section-solution {
-  background: var(--navyblue, #2e2f42);
+  background: var( --navyblue-color);
 }
 
 .full {
@@ -137,7 +141,7 @@ body {
   }
 
 .hid-link-title {
-  color: var(--navyblue, #2e2f42);
+  color: var(--navyblue-color);
   font-size: 20px;
   font-weight: 500;
   line-height: 1.2;
@@ -145,13 +149,13 @@ body {
 }
 
 .hid-link-text {
-  color: var(--slate, #434455);
+  color: var(--secondary-black);
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
 }
 .soul-title {
-  color: var(--navyblue, #2e2f42);
+  color: var(--navyblue-color);
   font-size: 36px;
   font-weight: 700;
   line-height: 1.11;
@@ -167,7 +171,7 @@ body {
   background: var(--navyblue, #2e2f42);
 }
 .footer-list {
-  color: var(--iris, #4d5ae5);
+  color: var(--iris-color);
   font-size: 18px;
   font-family: 'Raleway', sans-serif;
   font-weight: 800;
@@ -177,7 +181,7 @@ body {
   text-decoration: none;
 }
 .navigation-link {
-  color: var(--cloud, #f4f4fd);
+  color: var(--secondary-white);
   font-size: 18px;
   font-weight: 800;
   font-family:'Raleway', sans-serif;
@@ -187,7 +191,7 @@ body {
   text-decoration: none;
 }
 .footer-text {
-  color: var(--cloud, #f4f4fd);
+  color: var(--secondary-white);
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
@@ -203,13 +207,13 @@ body {
 .filter-link {
   border-radius: 4px;
   border: 1px solid var(--cornflower, #e7e9fc);
-  background: var(--cloud, #f4f4fd);
+  background: var(--secondary-white);
   font-family: inherit;
   cursor: pointer;
 }
 
 .accent {
-  color: var(--iris, #4d5ae5);
+  color: var(--iris-color);
   font-weight: 500; 
   font-size: 16px;
   font-family: "Roboto", sans-serif;
@@ -226,7 +230,7 @@ body {
   background-color: #404BBF;
 }
 .accent {
-  background-color: var(--iris, #F4F4FD);
+  background-color: #F4F4FD;
 }
 .foto-link {
   text-decoration: none;
@@ -243,12 +247,12 @@ body {
   font-size: 20px;
   line-height: 1.2;
   letter-spacing: 0.02em;
-  color: var(--navyblue, #2e2f42);
+  color: var(--navyblue-color);
 }
 .foto-link-text {
   font-size: 16px; 
   line-height: 1.5;
   letter-spacing: 0.02em;
-  color: #434455;
+  color: var(--secondary-black);
   text-decoration: none;
 }
