--- a/css/styles.css
+++ b/css/styles.css
@@ -163,9 +163,30 @@ body {
   text-transform: capitalize;
   text-align: center;
 }
+.title-list {
+  background-color: #FFFFFF
+}
 .title-team {
   background: url(<path-to-image>),
     lightgray -97.034px -0.927px / 181.897% 251.37% no-repeat;
+}
+.link-title {
+  color: var(--navyblue-color: #2e2f42);
+  text-align: center;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
+}
+.link-text {
+  color: var(--secondary-black);
+  text-align: center;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
 }
 .footer-navigation {
   background: var(--navyblue, #2e2f42);
@@ -234,7 +255,7 @@ body {
 }
 
 .foto-link-old {
-  
+
 }
 
 .foto-link {
@@ -242,11 +263,8 @@ body {
 }
 .foto-team {
   background: url(<path-to-image>),
-    lightgray -25.026px 0px / 125% 100% no-repeat;
-    list-style: none;
-    text-decoration: none;
+     lightgray 50% / cover no-repeat;
   }
-
 .foto-link-title {
   font-weight: 500 ;
   font-size: 20px;
