--- a/css/styles.css
+++ b/css/styles.css
@@ -3,8 +3,6 @@
  --secondary-font: "Roboto", sans-serif; 
  --secondary-black: #434455;
  --secondary-white: #f4f4fd;
-
-
   --navyblue-color: #2e2f42;
   --iris-color: #4d5ae5;
   --background-color: #FFFFFF;
@@ -139,7 +137,12 @@ body {
  .solution-button {
    background-color: #404BBF;
   }
-
+  .readers { 
+    background-color: #F4F4FD
+  }
+.hid {
+  color:var(--navyblue-color);
+}
 .hid-link-title {
   color: var(--navyblue-color);
   font-size: 20px;
@@ -171,7 +174,7 @@ body {
     lightgray -97.034px -0.927px / 181.897% 251.37% no-repeat;
 }
 .link-title {
-  color: var(--navyblue-color: #2e2f42);
+  color: var(--navyblue-color);
   text-align: center;
   font-size: 20px;
   font-style: normal;
@@ -217,6 +220,10 @@ body {
   line-height: 1.5;
   letter-spacing: 0.02em;
 }
+  .filter-hidden {
+    color: var(--white, #ffffff);
+    background-color: #4D5AE5;
+  }
 
 .filter-link :hover {
   color: #FFFFFF;
@@ -225,14 +232,20 @@ body {
 .filter-link :focus {
   color:  #FFFFFF;
 }
+
 .filter-link {
   border-radius: 4px;
   border: 1px solid var(--cornflower, #e7e9fc);
   background: var(--secondary-white);
   font-family: inherit;
   cursor: pointer;
+  font-family: "Roboto", sans-serif;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  color: #ffffff;
 }
-
 .accent {
   color: var(--iris-color);
   font-weight: 500; 
@@ -264,6 +277,12 @@ body {
 .foto-team {
   background: url(<path-to-image>),
      lightgray 50% / cover no-repeat;
+     background: url(<path-to-image>),
+    lightgray -25.026px 0px / 125% 100% no-repeat;
+  background: url(<path-to-image>),
+      lightgray -301.702px -106.916px / 234.581% 191.045% no-repeat;
+      
+      
   }
 .foto-link-title {
   font-weight: 500 ;
