--- a/css/styles.css
+++ b/css/styles.css
@@ -93,22 +93,20 @@ body {
   color:#404bbf;
 }
 .social-link:hover {
-  color: #404bbf;
+  color: var(--hover-color);
 }
 .social-link:focus {
-  color: #404bbf;
+  color: var(--hover-color);
 }
 .social-iten {
   color: var(--secondary-black);
   font-size: 16px;
-  font-weight: 400;
   line-height: 1.5;
   letter-spacing: 0.02em;
 }
 .social-iten:hover {
   color: #404bbf;
 }
-
 .social-iten:focus {
   color: #404bbf;
 }
@@ -141,8 +139,7 @@ body {
   line-height: 1.5;
   letter-spacing: 0.04em;
   color: #ffffff;
-  --iris-color: #4d5ae5;
-  background-color: #4D5AE5;
+  background-color: var(--iris-color);
 }
 .solution-button {
   background-color: #404BBF;
@@ -267,6 +264,7 @@ body {
 }
 .accent {
   color: var(--iris-color);
+  background-color: var(--secondary-white:
   font-weight: 500; 
   font-size: 16px;
   font-family: "Roboto", sans-serif;
