--- a/css/styles.css
+++ b/css/styles.css
@@ -93,20 +93,22 @@ body {
   color:#404bbf;
 }
 .social-link:hover {
-  color: var(--hover-color);
+  color: #404bbf;
 }
 .social-link:focus {
-  color: var(--hover-color);
+  color: #404bbf;
 }
 .social-iten {
   color: var(--secondary-black);
   font-size: 16px;
+  font-weight: 400;
   line-height: 1.5;
   letter-spacing: 0.02em;
 }
 .social-iten:hover {
   color: #404bbf;
 }
+
 .social-iten:focus {
   color: #404bbf;
 }
@@ -139,7 +141,8 @@ body {
   line-height: 1.5;
   letter-spacing: 0.04em;
   color: #ffffff;
-  background-color: var(--iris-color);
+  --iris-color: #4d5ae5;
+  background-color: #4D5AE5;
 }
 .solution-button {
   background-color: #404BBF;
@@ -264,7 +267,6 @@ body {
 }
 .accent {
   color: var(--iris-color);
-  background-color: var(--secondary-white:
   font-weight: 500; 
   font-size: 16px;
   font-family: "Roboto", sans-serif;
