--- a/css/styles.css
+++ b/css/styles.css
@@ -277,6 +277,8 @@ font-size: normal;
   letter-spacing: 0.04em;
   text-align: center; 
   cursor: pointer;
+  color: var( --secondary-white);
+  background-color: var(--hover-color);
 
 }
 .accent:hover,
