--- a/css/styles.css
+++ b/css/styles.css
@@ -175,7 +175,8 @@ font-size: normal;
 }
 .sec-soul {
   color: var(--navyblue-secondary-white);
- }
+  background-color: #F4F4FD
+}
 
 .soul-title {
   color: var(--navyblue-color);
