--- a/css/styles.css
+++ b/css/styles.css
@@ -5,7 +5,7 @@
  --secondary-white: #f4f4fd;
   --navyblue-color: #2e2f42;
   --iris-color: #4d5ae5;
-  --background-color: #FFFFFF;
+  --white: #ffffff;
   --hover-color: #404bbf;
   
   
@@ -250,14 +250,6 @@ font-size: normal;
   color: var(--iris-color);
 }
 
-.filter-link:hover {
-  color: #FFFFFF;
-}
-
-.filter-link:focus {
-  color:  #FFFFFF;
-}
-
 .filter-link {
   border-radius: 4px;
   border: 1px solid var(--cornflower, #e7e9fc);
@@ -271,24 +263,16 @@ font-size: normal;
   letter-spacing: 0.04em;
   color: #ffffff;
   background-color: var(--hover-color);
-}
-.accent {
   color: var(--iris-color);
-  font-weight: 500; 
-  font-size: 16px;
-  font-family: "Roboto", sans-serif;
-  line-height: 1.5;
-  letter-spacing: 0.04em;
   text-align: center; 
   cursor: pointer;
-  }
-
-.accent:hover,
-.accent:focus {
-  color: var( --secondary-white);
-  background-color: var(--hover-color);
 }
 
+.filter-link:hover, 
+.filter-link:focus {
+  background-color: var(--hover-color);
+  color: var(--white);
+}
 .foto-link-old {
 }
 
