--- a/css/styles.css
+++ b/css/styles.css
@@ -13,7 +13,7 @@
 body {
   font-family:var( --secondary-font);
   color: var( --secondary-black);
-  background-color: var(--background-color);
+  background-color: var(--white);
 
 }
 .header-navigation {
