--- a/css/styles.css
+++ b/css/styles.css
@@ -174,6 +174,7 @@ font-size: normal;
 }
 .sec-soul {
   color: var(--navyblue-secondary-white);
+  background-color:var(--secondary-white);
  }
 
 .soul-title {
@@ -184,7 +185,7 @@ font-size: normal;
   letter-spacing: 0.02em;
   text-transform: capitalize;
   text-align: center;
-  background-color: #F4F4FD;
+  background-color:var(--secondary-white);
 }
 .title-list {
   background-color: #FFFFFF
