--- a/css/styles.css
+++ b/css/styles.css
@@ -175,7 +175,7 @@ font-size: normal;
   background-color:var(--secondary-white);
   background-color: #F4F4FD;
  }
-.soul-title-list {
+.sec-soul-title {
   background-color:var(--secondary-white); 
 
 }
