--- a/css/styles.css
+++ b/css/styles.css
@@ -153,9 +153,15 @@ font-style: normal;
   letter-spacing: 0.02em;
 }
 .sec-soul {
- }
+  background-color: var(--secondary-white); 
+}
+
 .sec-soul-title {
   background-color: var(--secondary-white); 
+}
+.soul-title-list {
+background: url(<path-to-image>),
+ lightgray -72.845px -19px / 144.444% 112.667% no-repeat;
 
 }
 .soul-title {
