--- a/css/styles.css
+++ b/css/styles.css
@@ -153,11 +153,11 @@ font-style: normal;
   letter-spacing: 0.02em;
 }
 .sec-soul {
-  background-color: var(--secondary-white); 
+  background-color: #F4F4FD
 }
 
 .sec-soul-title {
-  background-color: var(--secondary-white); 
+  background-color: #F4F4FD
   
 }
 .sec-title-list {
@@ -166,7 +166,7 @@ background: url(<path-to-image>),
 
 }
 .doing-soul link {
-  background-color: var(--secondary-white); 
+  background-color: #F4F4FD
 }
 
 .soul-title {
