--- a/css/styles.css
+++ b/css/styles.css
@@ -160,7 +160,7 @@ font-style: normal;
 .sec-title-list {
 background: url(<path-to-image>),
  lightgray -72.845px -19px / 144.444% 112.667% no-repeat;
-
+ background-color: var(--secondary-white);
 }
 .doing-soul link {
   background-color: #F4F4FD
@@ -178,7 +178,8 @@ background: url(<path-to-image>),
   }
 
 .title-list {
-  background-color: #FFFFFF
+  background-color: #FFFFFF;
+  background-color: var(--secondary-white);
 }
 .title-team {
   background: url(<path-to-image>),
