--- a/css/styles.css
+++ b/css/styles.css
@@ -150,11 +150,11 @@ font-style: normal;
   letter-spacing: 0.02em;
 }
 .sec-soul {
-  background-color: #F4F4FD
+  background-color: #F4F4FD;
 }
 
 .sec-soul-title {
-  background-color: #F4F4FD
+  background-color: #F4F4FD;
   
 }
 .sec-title-list {
@@ -163,7 +163,7 @@ background: url(<path-to-image>),
  background-color: var(--secondary-white);
 }
 .doing-soul link {
-  background-color: #F4F4FD
+  background-color: #F4F4FD;
 }
 
 .soul-title {
@@ -174,12 +174,12 @@ background: url(<path-to-image>),
   letter-spacing: 0.02em;
   text-transform: capitalize;
   text-align: center;
-  background-color: #F4F4FD
+  background-color: #F4F4FD;
   }
 
 .title-list {
   background-color: #FFFFFF;
-  background-color: var(--secondary-white);
+  
 }
 .title-team {
   background: url(<path-to-image>),
