--- a/css/styles.css
+++ b/css/styles.css
@@ -149,15 +149,13 @@ font-style: normal;
   line-height: 1.5;
   letter-spacing: 0.02em;
 }
-.sec-soul {
- background-color: #F4F4FD;
+.sec-soul {background-color: var(--secondary-white);
 }
 
 .sec-title-list {
 background: url(<path-to-image>),
  lightgray -72.845px -19px / 144.444% 112.667% no-repeat;
- background-color: var(--secondary-white);
-}
+ }
 
 .soul-title {
   color: var(--navyblue-color);
