--- a/css/styles.css
+++ b/css/styles.css
@@ -149,11 +149,12 @@ font-style: normal;
   line-height: 1.5;
   letter-spacing: 0.02em;
 }
-.sec-soul {background-color: var(--secondary-white);
+.sec-soul {
+  background-color: var(--secondary-white);
 }
 
 .sec-title-list {
-background: url(<path-to-image>),
+  background-color: var(--secondary-white),
  lightgray -72.845px -19px / 144.444% 112.667% no-repeat;
  }
 
