--- a/css/styles.css
+++ b/css/styles.css
@@ -149,7 +149,7 @@ font-style: normal;
   line-height: 1.11;
   letter-spacing: 0.02em;
   text-transform: capitalize;
-  text-align: center
+  text-align: center;
  }
 .title-list {
   background-color: #FFFFFF;
